[package]
name = "process-monitor"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
test-suite = [ "bpf-common/test-utils" ]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "42fd82e32b85715df78508ef77f79eb8c2edd890", features = ["async_tokio"] }
bpf-common = { path = "../../bpf-common" }
bpf-filtering = { path = "../../bpf-filtering" }
pulsar-core = { path = "../../pulsar-core" }

tokio = { version = "1", features = ["full"] }
nix = "0.26.2"
log = "0.4"
thiserror = "1"
anyhow = "1.0.65"

[build-dependencies]
anyhow = "1"
bpf-builder = { path = "../../bpf-builder" }
